--- a/src/css/App.css
+++ b/src/css/App.css
@@ -64,6 +64,36 @@
     padding: 10px;
   }
   
+  .sidebar ul ul {
+    display: none;
+    position: absolute;
+    background-color: #033318;
+    min-width: 150px;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    z-index: 1;
+  }
+  
+  .sidebar ul li:hover > ul {
+    display: block;
+  }
+  
+  .sidebar ul ul li {
+    display: block;
+  }
+  
+  .sidebar ul ul li a {
+    color: #fff;
+    padding: 10px;
+    display: block;
+  }
+  
+  .sidebar ul ul li a:hover {
+    background-color: #fff;
+    color: #2e8b57;
+  }
+
   .sidebar a:hover,
   .sidebar a.active {
     background-color: #fff;
